--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,6 +9,8 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+
+ <!--   servlet configuration -->
   <servlet>
     <description></description>
     <display-name>dispatcher</display-name>
@@ -20,10 +22,11 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
   
+<!--  configuration files spring -->  
   <listener>
   	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
-  
+
   <context-param>
   	<param-name>contextConfigLocation</param-name>
   	<param-value>
@@ -31,7 +34,7 @@
   		classpath:um/config/service-context.xml
   	</param-value>
   </context-param>
-  
+    
   <resource-ref>
   	<description>DB Connection</description>
   	<res-ref-name>jdbc/spring</res-ref-name>
